workshop03/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weatherapp-deployment
spec:
  selector:
    matchLabels:
      app: weatherapp
  template:
    metadata:
      labels:
        app: weatherapp
    spec:
      containers:
      - name: weatherapp-container
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
