workshop03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-svc
spec:
  selector:
    app: weatherapp
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
