workshop03/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: weatherapp-vs
  namespace: default

spec:
  hosts:
    - "weather.178.128.135.141.nip.io"
  gateways:
    - "weather-ingress"
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherapp-svc
  - route:
    - destination:
        host: weatherapp-svc
